Change variable declarations to happen at :root instead of *.  Fix truncation of hero graphic on small screens in landscape mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* Global attributes */
-* {
+:root {
     /* Color palette */
     --lightest: #caf0f8;
     --second-lightest: #ade8f4;
@@ -83,15 +83,8 @@ header nav ul li a {
 
     background-image: url("../images/WebGeekBearHeader.png");
     background-position: center;
-    background-size: cover;
-}
-
-/* Hero graphic gets cut off on larger screens */
-@media screen and (min-width:900px) {
-    .hero {
-        background-size: contain;
-        background-repeat: no-repeat;
-    }
+    background-size:contain;
+    background-repeat: no-repeat;
 }
 
 /* Display of graphics of projects completed */
